--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <button id="header_color_btn" onclick="changeClassElementsColor()">CHANGE COLOR</button>
     <button id="header_text_btn" onclick="changeClassElementsText()">CHANGE TEXT</button>
 
+    <table>
+        <tbody><tr><td></td></tr></tbody>
+    </table>
+
     <h1 id="print_field"></h1>
     <script src="main.js"></script>
 </body>
